--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <body>
   <div class="container">
-    <img src="/qr-code-component-main/images/image-qr-code.png" alt="QRcode">
+    <img src="./images/image-qr-code.png" alt="QRcode">
     <h2>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
